Fix visible bug in mobileMenu

--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -24,6 +24,7 @@
 		#search_form_query,
 		#search_form_search_location,
 		.main-search__submit {
+			display: inline-block;
 			height: 50px;
 		}
 
